outputs_20260401-083520-84c756d6/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_ejha70o6\src\egtm_atom_3_phase_inverter_pwm.c:17:
C:\Users\extalth\AppData\Local\Temp\tdd_build_ejha70o6\include/egtm_atom_3_phase_inverter_pwm.h:26:31: error: unknown type name 'float32'; did you mean '_Float32'?
   26 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
C:\Users\extalth\AppData\Local\Temp\tdd_build_ejha70o6\src\egtm_atom_3_phase_inverter_pwm.c:22:10: fatal error: IfxPort_PinMap.h: No such file or directory
   22 | #include "IfxPort_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.
